style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "sans-serif";
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background-color: rgb(244, 255, 255);
}

.calculator {
  width: 270px;
  background-color: rgba(200, 200, 200, 0.601);
  border-radius: 13px;
  padding: 10px;
  box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.6);
}

.display {
  height: 50px;
  background-color: rgb(255, 255, 255);
  margin-bottom: 10px;
  margin-top: 20px;
  display: flex;
  align-items: center;
  padding: 0 10px;
  border-radius: 5px;
  font-weight: bold;
  font-size: 20px;
}

.buttons {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 10px;
  padding: 10px;
}

.btn {
  width: 50px;
  height: 30px;
  border: 1px solid black;
  border-radius: 6px;
  font-weight: bold;
  font-size: 16px;
  box-shadow: 1px 2px 0 rgba(27, 18, 18, 0.6);
  transition: 0.3s ease;
  cursor: pointer;
}

.btn:hover {
  background-color: rgb(213, 213, 213);
}

.btn:active {
  transform: translateY(2px);
  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
}

.del {
  font-size: 14px;
  background-color: green;
  color: white;
}

.del:hover {
  background-color: rgb(28, 183, 28);
}

.reset {
  grid-column: span 2;
  width: 110px;
  font-size: 14px;
  background-color: green;
  color: white;
}

.reset:hover {
  background-color: rgb(28, 183, 28);
}

.equal {
  grid-column: span 2;
  width: 110px;
  color: white;
  background-color: rgb(237, 66, 66);
  font-size: 20px;
}

.equal:hover {
  background-color: rgb(245, 99, 99);
}

